# epochAI

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt
.cursor/commands/: backtest-smoke.md  paper-trade-demo.md  run-model.md  run-tests.md  train.md  tune-sweep.md
.cursor/rules/: agent.mdc  config-driven.mdc  data-safety.mdc  definition-of-done.mdc  documentation.mdc  git-commits.mdc  inline-documentation.mdc  ml-causality.mdc  open-weights.mdc  plan-execution.mdc  prediction-execution-separation.mdc  project-layout.mdc  python-quality.mdc  regression-testing.mdc
config/: config.yaml
docs/: get-started.md  runbook.md
epoch_ai/: __init__.py  __main__.py  cli.py
tests/: conftest.py  test_acceptance.py  test_adaptation.py  test_audit_log.py  test_backtest_smoke.py  test_calibration.py  test_cli.py  test_config.py  test_config_overrides.py  test_cross_asset.py  test_degradation.py  test_downloader.py  test_enrichment.py  test_evolved_nn.py  test_executor_backend.py  test_export.py  test_fear_greed.py  test_features.py  test_forecast_api.py  test_golden_benchmark.py  test_health.py  test_interfaces.py  test_kill_switch.py  test_learning_curve.py  test_live_engine.py  test_live_hardening.py  test_logging_store.py  test_manipulation.py  test_metrics.py  test_mlflow_tracker.py  test_model.py  test_multi_head.py  test_nn_genome.py  test_observation.py  test_paper_trader.py  test_patterns.py  test_policy_auto_promote.py  test_policy_env.py  test_ppo_policy.py  test_progress.py  (+24 more)
(+136 files in other folders)
