[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epoch-ai"
version = "0.1.0"
description = "Self-improving crypto AI trading prediction system with progressive walk-forward learning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<3",
    "pandas>=2.1,<3",
    "pyarrow>=14",
    "pydantic>=2.5,<3",
    "PyYAML>=6",
    "lightgbm>=4.1",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
exchange = ["ccxt>=4.2"]
backtest = ["vectorbt>=0.26"]
tracking = ["mlflow>=2.9"]
online = ["river>=0.21"]
ta = ["pandas_ta>=0.3.14b"]
dev = ["ruff>=0.5", "pytest>=8"]

[project.scripts]
epoch-ai = "epoch_ai.cli:main"

[tool.setuptools]
packages = ["epoch_ai"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
